rename var. update comment.

--- a/source/web_scraping_with_requests.ipynb
+++ b/source/web_scraping_with_requests.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "desired_url = \"https://ipl-stats-sports-mechanic.s3.ap-south-1.amazonaws.com/ipl/feeds/stats/107-toprunsscorers.js?callback=ontoprunsscorers&_=1688441636396\""
+    "api_url = \"https://ipl-stats-sports-mechanic.s3.ap-south-1.amazonaws.com/ipl/feeds/stats/107-toprunsscorers.js?callback=ontoprunsscorers&_=1688441636396\""
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_scraped_text = requests.get(url=desired_url).text"
+    "raw_scraped_text = requests.get(url=api_url).text"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In most of the cases, the API response is a well-formatted json or xml document data. After inspection, in this case, directly converting the response data into a json object is not possible. However, for each player entry in the leaderboard data, the data starts with a json-formatted dictionary. To exploit this info, we make use of regex."
+    "In most of the cases, the API response is a well-formatted json or xml document data. After inspection, in this case, directly converting the response data into a json object is not possible. However, for each player entry in the leaderboard data, the data starts with a json-formatted dictionary. We exploit this info here."
    ]
   },
   {
