--- a/source/web_scraping_with_requests.ipynb
+++ b/source/web_scraping_with_requests.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "import os\n",
     "import pandas as pd\n",
     "import json"
    ]
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
        "'API response starts with: ontoprunsscorers({\"t'"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +88,7 @@
        "'API response ends with: layerID\":\"5432\"}]});'"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
        "138925"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
        "(36, 877)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +241,7 @@
        " 'ClientPlayerID': '3761'}"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
        "[2 rows x 42 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +514,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,6 +554,58 @@
     "\n",
     "highest_scorers_df = highest_scorers_df[cols_to_retain]\n",
     "highest_scorers_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(highest_scorers_df)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Store the data in the desired dir."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data successfully saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = \"ipl_highest_scorers_2023.xlsx\"\n",
+    "# create dir\n",
+    "relative_dir_path = \"../data\"\n",
+    "if not os.path.exists(relative_dir_path):\n",
+    "    os.mkdir(relative_dir_path)\n",
+    "# store the data\n",
+    "highest_scorers_df.to_csv(relative_dir_path + \"/\" + filename)\n",
+    "print(\"Data successfully saved.\")"
    ]
   },
   {
