--- a/source/02_web_scraping_NBA_stats_using_api.ipynb
+++ b/source/02_web_scraping_NBA_stats_using_api.ipynb
@@ -27,7 +27,35 @@
     "import requests\n",
     "import os\n",
     "import pandas as pd\n",
-    "import json"
+    "import logging\n",
+    "import time"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set up logging."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging_dir_path = \"../logging\"\n",
+    "logging_filename = \"logging.log\"\n",
+    "if not os.path.exists(logging_dir_path):\n",
+    "    os.mkdir(logging_dir_path)\n",
+    "\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format=\"%(asctime)s %(levelname)s %(message)s\",\n",
+    "    datefmt=\"%Y-%m-%d %H:%M:%S\",\n",
+    "    filename=logging_dir_path + \"/\" + logging_filename,\n",
+    ")"
    ]
   },
   {
@@ -52,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total time take to retrieve all data: 0.71169114112854 seconds.\n"
+     ]
+    }
+   ],
    "source": [
+    "start_time = time.time()\n",
     "scraped_text_json = requests.get(\n",
     "    \"https://stats.nba.com/stats/playerindex\", params=params, headers=headers\n",
-    ").json()"
+    ").json()\n",
+    "msg = (\n",
+    "    \"total time take to retrieve all data: \"\n",
+    "    + str(time.time() - start_time)\n",
+    "    + \" seconds.\"\n",
+    ")\n",
+    "logging.info(msg)\n",
+    "print(msg)"
    ]
   },
   {
@@ -140,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +389,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,95 +497,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Year:  1996-97\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  1997-98\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  1998-99\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  1999-00\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2000-01\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2002-03\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2003-04\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2004-05\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2005-06\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n",
-      "\n",
-      "Year:  2006-07\n",
-      "Season Type:  Preseason\n",
-      "Season Type:  Regular Season\n",
-      "Season Type:  Playoffs\n",
-      "Season Type:  All-Star\n",
-      "Season Type:  Play In\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'total time taken: 22.3494610786438 seconds.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cols = scraped_text_json[\"resultSets\"][0][\"headers\"]\n",
     "df_cumulative_players_data = pd.DataFrame(columns=cols)\n",
     "\n",
+    "start_time = time.time()\n",
     "for current_year in years:\n",
-    "    print(\"\\nYear: \", current_year)\n",
+    "    logging.info(\"Year: \" + str(current_year))\n",
     "\n",
     "    for current_season in season_types:\n",
-    "        print(\"Season Type: \", current_season)\n",
+    "        logging.info(\"Season Type: \" + str(current_season))\n",
     "        headers, params = get_api_header_and_params(\n",
     "            year=current_year, season_type=current_season\n",
     "        )\n",
@@ -570,21 +549,37 @@
     "        # add current season type data to the cumulative df\n",
     "        df_cumulative_players_data = pd.concat(\n",
     "            [df_cumulative_players_data, current_season_type_col_df], axis=0\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "msg = \"total time taken: \" + str(time.time() - start_time) + \" seconds.\"\n",
+    "logging.info(msg)\n",
+    "msg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total records retrieved:  26950\n"
+      "Total records retrieved: 27050\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "msg = \"Total records retrieved: \" + str(len(df_cumulative_players_data))\n",
+    "logging.info(msg)\n",
+    "print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -708,13 +703,12 @@
     }
    ],
    "source": [
-    "print(\"Total records retrieved: \", len(df_cumulative_players_data))\n",
     "display(df_cumulative_players_data.head(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +757,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>537</th>\n",
+       "      <th>539</th>\n",
        "      <td>203469</td>\n",
        "      <td>Zeller</td>\n",
        "      <td>Cody</td>\n",
@@ -787,7 +781,7 @@
        "      <td>Play In</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>538</th>\n",
+       "      <th>540</th>\n",
        "      <td>1627826</td>\n",
        "      <td>Zubac</td>\n",
        "      <td>Ivica</td>\n",
@@ -817,20 +811,20 @@
       ],
       "text/plain": [
        "    PERSON_ID PLAYER_LAST_NAME PLAYER_FIRST_NAME  PLAYER_SLUG     TEAM_ID  \\\n",
-       "537    203469           Zeller              Cody  cody-zeller  1610612748   \n",
-       "538   1627826            Zubac             Ivica  ivica-zubac  1610612746   \n",
+       "539    203469           Zeller              Cody  cody-zeller  1610612748   \n",
+       "540   1627826            Zubac             Ivica  ivica-zubac  1610612746   \n",
        "\n",
        "    TEAM_SLUG IS_DEFUNCT TEAM_CITY TEAM_NAME TEAM_ABBREVIATION  ...  \\\n",
-       "537      heat          0     Miami      Heat               MIA  ...   \n",
-       "538  clippers          0        LA  Clippers               LAC  ...   \n",
+       "539      heat          0     Miami      Heat               MIA  ...   \n",
+       "540  clippers          0        LA  Clippers               LAC  ...   \n",
        "\n",
        "    DRAFT_NUMBER ROSTER_STATUS FROM_YEAR TO_YEAR   PTS  REB  AST  \\\n",
-       "537          4.0           1.0      2013    2023   6.5  4.3  0.7   \n",
-       "538         32.0           1.0      2016    2023  10.8  9.9  1.0   \n",
+       "539          4.0           1.0      2013    2023   6.5  4.3  0.7   \n",
+       "540         32.0           1.0      2016    2023  10.8  9.9  1.0   \n",
        "\n",
        "     STATS_TIMEFRAME     Year  Season Type  \n",
-       "537           Season  2006-07      Play In  \n",
-       "538           Season  2006-07      Play In  \n",
+       "539           Season  2006-07      Play In  \n",
+       "540           Season  2006-07      Play In  \n",
        "\n",
        "[2 rows x 28 columns]"
       ]
@@ -853,16 +847,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Data successfully saved as:  nba_players_info_season_1997_to_2007.xlsx\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Data successfully saved as: nba_players_info_season_1997_to_2007.xlsx'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -873,8 +869,17 @@
     "    os.mkdir(relative_dir_path)\n",
     "# store the data\n",
     "df_cumulative_players_data.to_csv(relative_dir_path + \"/\" + filename)\n",
-    "print(\"\\nData successfully saved as: \", filename)"
+    "msg = \"Data successfully saved as: \" + filename\n",
+    "logging.info(msg)\n",
+    "msg"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
